# AgentBricks

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.cursor/rules/: customrules.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: brick_enhancement.md  bug_report.md  config.yml  documentation.md  feature_request.md  story_arc_idea.md
.github/workflows/: ci.yml
.mcp/: project-commands.md  project-rules.md  user-commands.md  user-rules.md
agent/: README.md  __init__.py  brick_data.py  cli.py  hints.py  progress.py  rag.py  review.py  submit.py
agent/chat/: __init__.py
agent/prompts/: __init__.py
agent/story_engine/: __init__.py
api/: README.md
api/admin/: __init__.py
api/recommender/: __init__.py
bricks/: README.md  __init__.py
bricks/features/: __init__.py
bricks/ingestion/: __init__.py
bricks/monitoring/: __init__.py
bricks/orchestration/: __init__.py
bricks/serving/: __init__.py
bricks/training/: __init__.py
docs/: README.md
docs/architecture/: overview.md
docs/quickstart/: README.md
infra/: README.md
scripts/: README.md  test_movie_recommender.py
sim/: README.md  __init__.py  generate.py
sim/agents/: __init__.py  user.py
sim/data/: movies.parquet  users.parquet
sim/interactions/: __init__.py  rules.py
sim/items/: __init__.py  movie.py
stories/: README.md
stories/movie-recommender/: README.md  TESTING_AND_RUNNING.md
stories/movie-recommender/brick-01-data-collection/: .gitignore  Dockerfile  docker-compose.yml  env.template  pytest.ini  requirements.txt
stories/movie-recommender/brick-01-data-collection/src/: api.py  kafka_producer.py  schemas.py
stories/movie-recommender/brick-02-feature-engineering/: .coverage 2  coverage.xml
stories/movie-recommender/brick-04-recommendation-service/: .dockerignore  Dockerfile  docker-compose.yml  requirements.txt
stories/movie-recommender/brick-06-orchestration/: README.md
tests/: README.md
tests/e2e/: __init__.py  conftest.py  test_movie_recommender_e2e.py
tests/integration/: __init__.py  conftest.py  test_api_kafka_integration.py  test_feature_store_integration.py  test_kafka_mongodb_integration.py
(+29 files in other folders)
